--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,105 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
-    <title>用户信息</title>
+    <title>金河市公交线路系统</title>
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="element.css">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <!-- 引入组件库 -->
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 </head>
 <body>
-<H1>⾦河市公交线路系统</H1>
-<el-row class="tac">
-    <el-col :span="12">
-        <h5>默认颜色</h5>
-        <el-menu
-                default-active="2"
-                class="el-menu-vertical-demo"
-                @open="handleOpen"
-                @close="handleClose">
-            <el-submenu index="1">
-                <template slot="title">
-                    <i class="el-icon-location"></i>
-                    <span>导航一</span>
-                </template>
-                <el-menu-item-group>
-                    <template slot="title">分组一</template>
-                    <el-menu-item index="1-1">选项1</el-menu-item>
-                    <el-menu-item index="1-2">选项2</el-menu-item>
-                </el-menu-item-group>
-                <el-menu-item-group title="分组2">
-                    <el-menu-item index="1-3">选项3</el-menu-item>
-                </el-menu-item-group>
-                <el-submenu index="1-4">
-                    <template slot="title">选项4</template>
-                    <el-menu-item index="1-4-1">选项1</el-menu-item>
+
+<div id="app" style="height:100%">
+    <el-container style="height:100%">
+        <e1-aside width="300px" style="height:100%, background-color: #545c64">
+            <el-menu
+                    default-active="2"
+                    class="el-menu-vertical-demo"
+                    @open="handleOpen"
+                    @close="handleClose"
+                    style="height:100%"
+                    background-color="#545c64"
+                    text-color="#fff"
+                    active-text-color="#ffd04b">
+                <el-submenu index="1">
+                    <template slot="title">
+                        <i class="el-icon-location"></i>
+                        <span>基本线路查询</span>
+                    </template>
+                    <el-menu-item-group>
+                        <el-menu-item index="1-1">选项1</el-menu-item>
+                        <el-menu-item index="1-2">选项2</el-menu-item>
+                        <el-menu-item index="1-3">选项3</el-menu-item>
+                    </el-menu-item-group>
                 </el-submenu>
-            </el-submenu>
-            <el-menu-item index="2">
-                <i class="el-icon-menu"></i>
-                <span slot="title">导航二</span>
-            </el-menu-item>
-            <el-menu-item index="3" disabled>
-                <i class="el-icon-document"></i>
-                <span slot="title">导航三</span>
-            </el-menu-item>
-            <el-menu-item index="4">
-                <i class="el-icon-setting"></i>
-                <span slot="title">导航四</span>
-            </el-menu-item>
-        </el-menu>
-    </el-col>
-    <el-col :span="12">
-        <h5>自定义颜色</h5>
-        <el-menu
-                default-active="2"
-                class="el-menu-vertical-demo"
-                @open="handleOpen"
-                @close="handleClose"
-                background-color="#545c64"
-                text-color="#fff"
-                active-text-color="#ffd04b">
-            <el-submenu index="1">
-                <template slot="title">
-                    <i class="el-icon-location"></i>
-                    <span>导航一</span>
-                </template>
-                <el-menu-item-group>
-                    <template slot="title">分组一</template>
-                    <el-menu-item index="1-1">选项1</el-menu-item>
-                    <el-menu-item index="1-2">选项2</el-menu-item>
-                </el-menu-item-group>
-                <el-menu-item-group title="分组2">
-                    <el-menu-item index="1-3">选项3</el-menu-item>
-                </el-menu-item-group>
-                <el-submenu index="1-4">
-                    <template slot="title">选项4</template>
-                    <el-menu-item index="1-4-1">选项1</el-menu-item>
+
+                <el-submenu index="2">
+                    <template slot="title">
+                        <i class="el-icon-star-off"></i>
+                        <span>站点查询</span>
+                    </template>
+                    <el-menu-item-group>
+                        <el-menu-item index="1-1">选项1</el-menu-item>
+                        <el-menu-item index="1-2">选项2</el-menu-item>
+                        <el-menu-item index="1-3">选项3</el-menu-item>
+                    </el-menu-item-group>
                 </el-submenu>
-            </el-submenu>
-            <el-menu-item index="2">
-                <i class="el-icon-menu"></i>
-                <span slot="title">导航二</span>
-            </el-menu-item>
-            <el-menu-item index="3" disabled>
-                <i class="el-icon-document"></i>
-                <span slot="title">导航三</span>
-            </el-menu-item>
-            <el-menu-item index="4">
-                <i class="el-icon-setting"></i>
-                <span slot="title">导航四</span>
-            </el-menu-item>
-        </el-menu>
-    </el-col>
-</el-row>
+
+                <el-menu-item index="3" >
+                    <i class="el-icon-search"></i>
+                    <span slot="title">班次查询</span>
+                </el-menu-item>
+                <el-menu-item index="4" >
+                    <i class="el-icon-s-data"></i>
+                    <span slot="title">分析查询</span>
+                </el-menu-item>
+                <el-menu-item index="5">
+                    <i class="el-icon-setting"></i>
+                    <span slot="title">线路管理</span>
+                </el-menu-item>
+            </el-menu>
+
+        </e1-aside>
+
+        <el-container>
+            <el-header style="text-align: right; font-size: 12px">
+                <el-dropdown>
+                    <i class="el-icon-setting" style="margin-right: 15px"></i>
+                    <el-dropdown-menu slot="dropdown">
+                        <el-dropdown-item>新增</el-dropdown-item>
+                        <el-dropdown-item>删除</el-dropdown-item>
+                    </el-dropdown-menu>
+                </el-dropdown>
+            </el-header>
+
+            <el-main>
 
 
-<script src="jquery.min.js"></script>
-<script src="vue.js"></script>
-<!-- 引入组件库 -->
-<script src="element.js"></script>
+            </el-main>
+        </el-container>
+
+    </el-container>
+
+</div>
+
+</body>
+
+<!-- import Vue before Element -->
+<script src="https://unpkg.com/vue/dist/vue.js"></script>
+<!-- import JavaScript -->
+<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 
 <script>
-  export default {
+    new Vue({
+      el: '#app',
+      data : {
+
+      },
     methods: {
       handleOpen(key, keyPath) {
         console.log(key, keyPath);
@@ -108,7 +104,9 @@
         console.log(key, keyPath);
       }
     }
-  }
+    })
 </script>
-</body>
+
+
+
 </html>
