--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,18 +22,10 @@
                     background-color="#545c64"
                     text-color="#fff"
                     active-text-color="#ffd04b">
-                <el-submenu index="1">
-                    <template slot="title">
-                        <i class="el-icon-location"></i>
-                        <span>基本线路查询</span>
-                    </template>
-                    <el-menu-item-group>
-                        <el-menu-item index="1-1">选项1</el-menu-item>
-                        <el-menu-item index="1-2">选项2</el-menu-item>
-                        <el-menu-item index="1-3">选项3</el-menu-item>
-                    </el-menu-item-group>
-                </el-submenu>
-
+                <el-menu-item index="1" >
+                    <i class="el-icon-search"></i>
+                    <span slot="title">基本线路查询</span>
+                </el-menu-item>
                 <el-submenu index="2">
                     <template slot="title">
                         <i class="el-icon-star-off"></i>
@@ -45,11 +37,17 @@
                         <el-menu-item index="1-3">选项3</el-menu-item>
                     </el-menu-item-group>
                 </el-submenu>
-
-                <el-menu-item index="3" >
-                    <i class="el-icon-search"></i>
-                    <span slot="title">班次查询</span>
-                </el-menu-item>
+                <el-submenu index="3">
+                    <template slot="title">
+                        <i class="el-icon-location"></i>
+                        <span>班次查询</span>
+                    </template>
+                    <el-menu-item-group>
+                        <el-menu-item index="1-1">选项1</el-menu-item>
+                        <el-menu-item index="1-2">选项2</el-menu-item>
+                        <el-menu-item index="1-3">选项3</el-menu-item>
+                    </el-menu-item-group>
+                </el-submenu>
                 <el-menu-item index="4" >
                     <i class="el-icon-s-data"></i>
                     <span slot="title">分析查询</span>
@@ -74,7 +72,28 @@
             </el-header>
 
             <el-main>
+                <el-row type="flex" class="row-input" justify="center">
+                    <el-col :span="6">
+                        <el-input v-model="input" placeholder="请输入要查询的线路名" clearable></el-input>
+                    </el-col>
+                    <el-col :span="6" :offset="1">
+                        <el-button type="primary" @click="searchByName">搜索</el-button>
+                    </el-col>
+                </el-row>
 
+                <el-descriptions title="基本路线信息" direction="vertical" :column="4" border>
+                    <el-descriptions-item label="路线名">30路</el-descriptions-item>
+                    <el-descriptions-item label="线路类型">干线</el-descriptions-item>
+                    <el-descriptions-item label="路线走向">燎原-北路湾公交站</el-descriptions-item>
+                    <el-descriptions-item label="方向性">
+                        <el-tag size="small">双向</el-tag>
+                    </el-descriptions-item>
+                    <el-descriptions-item label="运行时间">6：30-22：30</el-descriptions-item>
+                    <el-descriptions-item label="单程时间">约49分</el-descriptions-item>
+                    <el-descriptions-item label="单向里程">12.0km</el-descriptions-item>
+                    <el-descriptions-item label="班次间隔">8</el-descriptions-item>
+
+                </el-descriptions>
 
             </el-main>
         </el-container>
@@ -94,7 +113,7 @@
     new Vue({
       el: '#app',
       data : {
-
+            input: ''
       },
     methods: {
       handleOpen(key, keyPath) {
